--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.8",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.0",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
