--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.8",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.40.0",
     "react-bootstrap": "^2.2.0",
